laravel-app/k8s/svc.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: laravel-app
  spec:
    type: ClusterIP
    ports:
      - name: laravel-app
        port: 8080
    selector:
      app: laravel-app
