laravel-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: larvel-app
spec:
  rules:
    - host: 'laravel.PLACEHOLDER_DOMAIN'
      http:
        paths:
          - path: /
            backend:
              serviceName: laravel-app 
              servicePort: 8080
  tls:
    - secretName: tls-laravel-app 
      hosts:
        - 'laravel.PLACEHOLDER_DOMAIN'
